Creation sortie: ajout pour lieu et ville

--- a/templates/main/creationsortie.html.twig
+++ b/templates/main/creationsortie.html.twig
@@ -52,6 +52,7 @@
             <select id="lieu-select" onchange=showInfo(this.value) class="form-control" name="lieu-select">
             </select>
         </div>
+            <a href="{{ path('app_lieu')}}" class="btn btn-action">  Créer un lieu</a>
         <div>
             <label for="rue-lieu-sortie">Rue :</label>
             <input type="text" name="rue-lieu-sortie" id="rue-lieu-sortie" disabled value="">
