Creation sortie: ajout pour lieu et ville suite

--- a/templates/main/creationville.html.twig
+++ b/templates/main/creationville.html.twig
@@ -6,12 +6,12 @@
         <div class="row">
             <div class="col-lg-6">
                 <div>
-                    <label for="ville-lieu-sortie">Rue du lieu :</label>
-                    <input type="text" name="ville-lieu-sortie">
+                    <label for="ville-lieu">Ville du lieu :</label>
+                    <input type="text" name="ville-lieu">
                 </div>
                 <div>
-                    <label for="cp-lieu-sortie">Code postal :</label>
-                    <input type="text" name="cp-lieu-sortie" id="cp-lieu-sortie" disabled value="">
+                    <label for="cp-ville-lieu">Code postal :</label>
+                    <input type="text" name="cp-ville-lieu" id="cp-ville-lieu" disabled value="">
                 </div>
             </div>
         </div>
