Creation sortie: ajout pour lieu et ville suite

--- a/templates/main/creationlieu.html.twig
+++ b/templates/main/creationlieu.html.twig
@@ -15,7 +15,7 @@
                 </div>
                 <div>
                     <label for="cp-lieu-sortie">Code postal :</label>
-                    <input type="text" name="cp-lieu-sortie" id="cp-lieu-sortie" disabled value="">
+                    <input type="text" name="cp-lieu-sortie" id="cp-lieu-sortie">
                 </div>
                 <div>
                     <label for="ville-lieu-sortie">Rue du lieu :</label>
@@ -24,11 +24,11 @@
                 </div>
                 <div>
                     <label for="lat-lieu-sortie">Latitude :</label>
-                    <input type="number" name="lat-lieu-sortie" min="-90" max="90" step=".0000001" disabled id="lat-lieu-sortie">
+                    <input type="number" name="lat-lieu-sortie" min="-90" max="90" step=".0000001">
                 </div>
                 <div>
                     <label for="long-lieu-sortie">Longitude :</label>
-                    <input type="number" name="long-lieu-sortie" min="-180" max="180" step=".0000001" disabled id="long-lieu-sortie">
+                    <input type="number" name="long-lieu-sortie" min="-180" max="180" step=".0000001">
                 </div>
                 </div>
             </div>
