--- a/templates/main/creationville.html.twig
+++ b/templates/main/creationville.html.twig
@@ -11,7 +11,7 @@
                 </div>
                 <div>
                     <label for="cp-ville-lieu">Code postal :</label>
-                    <input type="text" name="cp-ville-lieu" id="cp-ville-lieu" disabled value="">
+                    <input type="text" name="cp-ville-lieu" id="cp-ville-lieu">
                 </div>
             </div>
         </div>
