--- a/templates/main/creationlieu.html.twig
+++ b/templates/main/creationlieu.html.twig
@@ -18,9 +18,15 @@
                     <input type="text" name="cp-lieu-sortie" id="cp-lieu-sortie">
                 </div>
                 <div>
-                    <label for="ville-lieu-sortie">Rue du lieu :</label>
-                    <input type="text" name="ville-lieu-sortie">
-                    <a href="{{ path('app_ville')}}" class="btn btn-action">  Créer une ville</a>
+                    <label for="ville-select">Ville du lieu :</label>
+                    <select id="ville-select" onchange=populateSelect(this.value) class="form-control" name="ville-select">
+                        <option selected>Tous</option>
+                        {% for vv in ville %}
+                            <option value="{{ vv.id }}"> {{ vv.nom }}</option>
+                        {% endfor %}</select>
+                        <div>
+                            <a href="{{ path('app_ville')}}" class="btn btn-action">  Créer une ville</a>
+                        </div>
                 </div>
                 <div>
                     <label for="lat-lieu-sortie">Latitude :</label>
@@ -37,4 +43,58 @@
             </div>
         </div>
     </form>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script>
+        function populateSelect(id) {
+            //vider le select des lieux
+            document.getElementById('lieu-select').innerHTML = "";
+            // THE JSON ARRAY.
+            let url = 'http://localhost/symfony/SortirEniApp/public/api/select_lieu';
+            let url2 = url + '/' + id;
+            var ele = document.getElementById('lieu-select');
+            console.log(url2);
+            let tableau = [];
+            axios.get(url2).then(response => {
+                tableau = response.data;
+                console.log(response.data);
+                var opt = document.createElement('option');
+                opt.value = 0;
+                opt.innerHTML = "Tous";
+                opt.selected = true;
+                ele.appendChild(opt);
+                for (var i = 0; i < tableau.length; i++) {
+                    ele.innerHTML = ele.innerHTML +
+                        '<option value="' + tableau[i]["id"] + '">' + tableau[i]["nom"] + '</option>';
+                }
+            })
+        }
+
+        function showInfo(id) {
+            // Vider les inputs des lieux
+            document.getElementById('rue-lieu-sortie').value = "";
+            document.getElementById('cp-lieu-sortie').value = "";
+            document.getElementById('lat-lieu-sortie').value = "";
+            document.getElementById('long-lieu-sortie').value = "";
+            // THE JSON ARRAY.
+            let url = 'http://localhost/symfony/SortirEniApp/public/api/info_lieu';
+            let url2 = url + '/' + id;
+            let tableau = [];
+            axios.get(url2).then(response => {
+                console.log(url2);
+                tableau = response.data;
+                console.log(response.data);
+                document.getElementById('rue-lieu-sortie').value = tableau[0];
+                document.getElementById('cp-lieu-sortie').value = tableau[1];
+                document.getElementById('lat-lieu-sortie').value = tableau[2];
+                document.getElementById('long-lieu-sortie').value = tableau[3];
+                console.log(tableau['rue']);
+                var cpSortie = document.getElementById('cp-lieu-sortie');
+            })
+        }
+        function dateFinMini(value) {
+            //alert(value);
+            document.getElementById("date-l-sortie").setAttribute("max",value);
+        }
+    </script>
 {% endblock %}
