--- a/templates/main/annulersortie.html.twig
+++ b/templates/main/annulersortie.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
         <h1> Annuler une sortie </h1>
 
-        <div class="row">
+        <div class="row annulerS">
             <div class="col-lg-6">
                         <div>
                             <p>Nom de la sortie :   {{ s.nom }} </p>
@@ -17,13 +17,13 @@
                         <div>
                             <p> Lieu:  {{ s.lieu.nom }} {{ s.lieu.rue }} {{  s.lieu.ville.codePostal }} {{  s.lieu.ville.nom}}</p>
                         </div>
-                <form name="annule_sortie"  action="{{ path('annuler_sortie',{id: s.id}) }}" method="post">
+                <form class="annuler" name="annule_sortie"  action="{{ path('annuler_sortie',{id: s.id}) }}" method="post">
                     <div>
                         <label for="motif_annulation">Motif:</label>
                         <textarea required name="motif_annulation"></textarea>
                     </div>
-                    <div>
-                        <button class=" btn btn-action" type="submit" name="annulation" > Enregistrer</button>
+                    <div class="button-container">
+                        <button class=" btn btn-action" type="submit" name="annulation" ><i class="fas fa-save"></i> Enregistrer</button>
                         <a href="{{ path('main')}}" class="btn btn-action"> Annuler</a>
                     </div>
                 </form>
