--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -420,3 +420,13 @@ header .container > div {
 .clickable-row{
     cursor:pointer;
 }
+.choosepicture{
+    display: none;
+    margin-top: 10px;
+    padding: 0.5em 1em!important;
+    text-decoration: none;
+    color: #042444!important;
+}
+.picture_profil{
+    margin-bottom: 1em;
+}
