--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -5,13 +5,52 @@
 {% block body %}
     <h1>Register</h1>
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+    <form name="registration_form" method="post">
+        <div class="mb-3">
+            <label for="registration_form_pseudo" class="form-label required">Pseudo</label>
+            <input type="text" id="registration_form_pseudo" name="registration_form[pseudo]" required="required"
+                   maxlength="50" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="registration_form_nom" class="form-label required">Nom</label>
+            <input type="text" id="registration_form_nom" name="registration_form[nom]" required="required"
+                   maxlength="50" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="registration_form_prenom" class="form-label required">Prenom</label>
+            <input type="text" id="registration_form_prenom" name="registration_form[prenom]" required="required"
+                   maxlength="50" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="registration_form_email" class="form-label required">Email</label>
+            <input type="text" id="registration_form_email" name="registration_form[email]" required="required"
+                   maxlength="180" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="registration_form_telephone" class="form-label">Telephone</label>
+            <input type="text" id="registration_form_telephone" name="registration_form[telephone]" maxlength="15"
+                   class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="registration_form_plainPassword" class="form-label required">Password</label>
+            <input type="password" id="registration_form_plainPassword" name="registration_form[plainPassword]"
+                   required="required" autocomplete="new-password" class="form-control">
+        </div>
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+
+        <div class="mb-3">
+            <label class="form-label" for="registration_form_site">Site</label>
+            <select id="registration_form_site" name="registration_form[site]" class="form-select">
+            </select>
+        </div>
+
+        <div class="mb-3">
+            <div class="form-check">
+                <input type="checkbox" id="registration_form_agreeTerms" name="registration_form[agreeTerms]"
+                       required="required" class="form-check-input" value="1">
+                <label class="form-check-label required" for="registration_form_agreeTerms">Agree terms</label>
+            </div>
+        </div>
+        <button type="submit" class="btn btn-action">Register</button>
+    </form>
 {% endblock %}
